Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55718

Angle used in Qt 5.7 crashes always when build with vs2015 update 3 regardless of /d2SSAOptimizer-

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.1
    • 5.7.0, 5.8.0, 5.9.0
    • GUI: OpenGL
    • None
    • visual studio 2015 + update 3
      visual studio 2015 + update 3 + KB3165756
    • 3e1a7251b4c1878b7be79ab2ea6eed3421d16a9d

      (I wrote about that already in QTBUG-54443, but after talking to Friedemann Kleint on QtCon , I make a qtbug on its own.)

      I built qt 5.7 with visual studio 2015 + update 3 + KB3165756
      Every qt program using qtquick crashes when forcing angle. For example by setting QT_OPENGL=angle as environment variable before running.
      I also recompiled everything with /d2SSAOptimizer- (new optimizer off)
      , it is still crashing at the same location. Debug Build works everytime.
      Qt 5.6.1 also works in Release and Debug built with with visual studio 2015 + update 3 + KB3165756
      Qt 5.70 build with vs2015 update 2 also worked.
      callstack:

      libGLESv2.dll!gl::Context::initCaps(unsigned int clientVersion) Line 2012 C++
      libGLESv2.dll!gl::Context::Context(const egl::Config * config, const gl::Context * shareContext, rx::Renderer * renderer, const egl::AttributeMap & attribs) Line 153	C++
      libGLESv2.dll!rx::DisplayD3D::createContext(const egl::Config * config, const gl::Context * shareContext, const egl::AttributeMap & attribs) Line 237	C++
      libGLESv2.dll!egl::Display::createContext(const egl::Config * configuration, gl::Context * shareContext, const egl::AttributeMap & attribs, gl::Context * * outContext) Line 716	C++
      libGLESv2.dll!egl::CreateContext(void * dpy, void * config, void * share_context, const int * attrib_list) Line 487	C++
       	qwindows.dll!QWindowsEGLContext::QWindowsEGLContext(QWindowsEGLStaticContext * staticContext, const QSurfaceFormat & format, QPlatformOpenGLContext * share) Line 388	C++
       	qwindows.dll!QWindowsEGLStaticContext::createContext(QOpenGLContext * context) Line 282	C++
       	qwindows.dll!QWindowsIntegration::createPlatformOpenGLContext(QOpenGLContext * context) Line 442	C++
      Qt5GuiRTIL.dll!QOpenGLContext::create() Line 612	C++
      Qt5QuickRTIL.dll!QSGWindowsRenderLoop::show(QQuickWindow * window) Line 174	C++
      Qt5GuiRTIL.dll!QWindow::event(QEvent * ev) Line 2164	C++
      Qt5CoreRTIL.dll!QCoreApplication::notify(QObject * receiver, QEvent * event) Line 1050	C++
      Qt5CoreRTIL.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 988	C++
       Qt5GuiRTIL.dll!QWindow::setVisible(bool visible) Line 536	C++
       Qt5QuickRTIL.dll!QQuickWindowQmlImpl::setVisible(bool visible) Line 83	C++
      Qt5QuickRTIL.dll!QQuickWindowQmlImpl::qt_metacall(QMetaObject::Call _c, int _id, void * * _a) Line 183	C++
      Qt5QmlRTIL.dll!QQmlVMEMetaObject::metaCall(QObject * o, QMetaObject::Call c, int _id, void * * a) Line 885	C++
      Qt5CoreRTIL.dll!QMetaObject::metacall(QObject * object, QMetaObject::Call cl, int idx, void * * argv) Line 299	C++
       	Qt5QmlRTIL.dll!QQmlPropertyPrivate::write(QObject * object, const QQmlPropertyData & property, const QVariant & value, QQmlContextData * context, QFlags<enum QQmlPropertyPrivate::WriteFlag> flags) Line 1286	C++
       	Qt5QmlRTIL.dll!QV4::QObjectWrapper::setProperty(QV4::ExecutionEngine * engine, QObject * object, QQmlPropertyData * property, const QV4::Value & value) Line 546	C++
       	Qt5QmlRTIL.dll!QV4::QObjectWrapper::setProperty(QV4::ExecutionEngine * engine, QObject * object, int propertyIndex, const QV4::Value & value) Line 660	C++
       	0000000002290bed()	Unknown
       	0000000002451368()	Unknown
       	000000000015d910()	Unknown
       	0000000000284e90()	Unknown
       	0000000000284e90()	Unknown
       	0000000000000002()	Unknown
      

        1. qtdiag.txt
          6 kB
          gunnar_roth
        2. libGLESv2_19.00.24215.1.7z
          4.15 MB
          gunnar_roth
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            gunnar.roth Gunnar Roth
            Votes:
            2 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes