ANGLE: Fix crash with ltcg on Visual Studio 2015 Update 3

Release builds of applications that used Qt configured with "link time
code generation" crashed (memory access violation), when calling
GetInternalFormatInfo in Context::initCaps.

It looks like this is a compiler problem that can be avoided by not
using a reference for the return value.

Task-number: QTBUG-55718
Change-Id: Ic1fb95d7b518a49859f41c819e860864387a8d3c
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>